--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,11 @@
     <link rel="canonical" href="https://googlenanobanana.com">
     <link rel="icon" type="image/png" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 
+<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
+<meta property="og:image:alt" content="Google Nano Banana Logo">
+
+<meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
+<meta name="twitter:image:alt" content="Google Nano Banana Logo">
 
     <style>
         * {
