--- a/templates/terms.html
+++ b/templates/terms.html
@@ -25,6 +25,11 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Terms & Conditions | Google Nano Banana">
     <meta name="twitter:description" content="Read the Terms & Conditions for using Google Nano Banana’s AI image generation services.">
+<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
+<meta property="og:image:alt" content="Google Nano Banana Logo">
+
+<meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
+<meta name="twitter:image:alt" content="Google Nano Banana Logo">
 
     <style>
         * {
