--- a/templates/home.html
+++ b/templates/home.html
@@ -1706,8 +1706,8 @@
         </a>
         
         <nav class="site-nav">
-            <a href="#features">Features</a>
-            <a href="#showcase">Showcase</a>
+            <a href="/remove-background">Features</a>
+            <a href="/remove-background">Background Remover</a>
             <a href="#pricing">Pricing</a>
             <a href="#support">Support</a>
             <button class="cta-button">Get Started Free</button>
