--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,9 @@
     <link rel="canonical" href="https://googlenanobanana.com">
     <link rel="icon" type="image/png" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 
+    <link rel="icon" href="/static/favicon.ico">
+
+
 <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 <meta name="theme-color" content="#ffffff">
@@ -1700,7 +1703,7 @@
 <header class="site-header">
     <div class="container">
         <a href="#" class="site-logo">
-           <img class="loogo" src="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
+           <img class="loogo" src="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration%20(1)%20(2).png?alt=media&token=dafa298c-864b-41df-9c73-d37492afe20a">
 
             Nano Banana
         </a>
