--- a/templates/terms.html
+++ b/templates/terms.html
@@ -30,6 +30,7 @@
 
 <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 <meta name="twitter:image:alt" content="Google Nano Banana Logo">
+<link rel="icon" href="/static/favicon.ico">
 
     <style>
         * {
