--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,8 @@
     <meta name="keywords" content="google nano banana, nano banana ai, google ai image generation, ai art generator, professional ai image creator, google nano banana technology, ai image generation platform">
     <meta name="author" content="Google Nano Banana Technologies">
 
+    <link rel="icon" href="/static/favicon.ico">
+
     <meta property="og:title" content="Google Nano Banana | AI Image Generation Platform">
     <meta property="og:description" content="Professional AI image generation powered by Google Nano Banana technology. Create stunning visuals instantly with enterprise-grade AI art generation.">
     <meta property="og:type" content="website">
@@ -31,9 +33,6 @@
 
     <link rel="canonical" href="https://googlenanobanana.com">
     <link rel="icon" type="image/png" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
-
-    <link rel="icon" href="/static/favicon.ico">
-
 
 <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
@@ -1703,7 +1702,7 @@
 <header class="site-header">
     <div class="container">
         <a href="#" class="site-logo">
-           <img class="loogo" src="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration%20(1)%20(2).png?alt=media&token=dafa298c-864b-41df-9c73-d37492afe20a">
+           <img class="loogo" src="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 
             Nano Banana
         </a>
