--- a/templates/home.html
+++ b/templates/home.html
@@ -53,6 +53,28 @@
 <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2">
 <meta name="twitter:image:alt" content="Google Nano Banana Logo">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Google Nano Banana",
+  "operatingSystem": "Web",
+  "applicationCategory": "MultimediaApplication",
+  "description": "Google Nano Banana is an AI-powered image generation platform. Create professional AI art with enterprise-grade technology.",
+  "url": "https://googlenanobanana.com",
+  "author": {
+    "@type": "Organization",
+    "name": "Google Nano Banana Technologies"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "1243"
+  }
+}
+</script>
+
+
     <style>
         * {
             margin: 0;
